fix: aumentando gap entrr icones

--- a/src/app/components/Footer/Footer.css
+++ b/src/app/components/Footer/Footer.css
@@ -34,4 +34,8 @@
     padding: 1vh 10%;
     padding-right: 25%;
   }
+
+  .icons-container {
+    gap: 8%;
+  }
 }
